--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>index</title>
+  <title>search</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -10,7 +10,7 @@
     <li><a href="list.html">목록보기</a></li>
     <li><a href="search.html">검색하기</a></li>
   </ol>
-  <h2>사용 방법</h2>
-  <p>목록 보기에 들어가시면 가나다 순으로 현재 토론토 도서관에서 빌려보실 수 있는 책 목록이 나옵니다.</p>
+  <h2>검색하기</h2>
+  <p></p>
 </body>
 </html>
