--- a/list.html
+++ b/list.html
@@ -3,6 +3,21 @@
 <head>
   <title>list</title>
   <meta charset="utf-8">
+  <style>
+    div {
+    position: relative;
+    padding-top: 56%;
+    width: 100%;
+    height: 0;
+    }
+    div > iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 10000%;
+    }
+  </style>
 </head>
 <body>
   <h1><a href="index.html">토론토 도서관 한글 책 제목 검색</a></h1>
@@ -10,10 +25,8 @@
     <li><a href="list.html">목록보기</a></li>
     <li><a href="search.html">검색하기</a></li>
   </ol>
-  <h2>토론토 공립 도서관 한글 책 소장 목록</h2>
-  <p>
+  <div>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRksJcjHBcjquVJos_kIRqZxGlPLFccJfRulbbob5jtf5Ddbbm8zfDqMKb91_AdA7JGkdJsZb9r-BOy/pubhtml?widget=true&amp;headers=false"></iframe>
-  </p>
-  <div id="output">...</div>
+  </div>
 </body>
 </html>
