--- a/search.html
+++ b/search.html
@@ -3,14 +3,43 @@
 <head>
   <title>search</title>
   <meta charset="utf-8">
-</head>
-<body>
+  <style>
+    body{
+      font-family: 'gulim', 'gothic';
+    }
+    div {
+    position: relative;
+    padding-top: 56%;
+    width: 95%;
+    height: 0;
+    }
+    div > iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 150%;
+    }
+  </style>
+  </head>
+  <body>
   <h1><a href="index.html">토론토 도서관 한글 책 제목 검색</a></h1>
   <ol>
     <li><a href="list.html">목록보기</a></li>
     <li><a href="search.html">검색하기</a></li>
   </ol>
-  <h2>검색하기</h2>
-  <p></p>
-</body>
-</html>
+  <p>
+    <br>사용방법:<br><br>
+    Control키와 F키를 동시에 눌러서 검색창을 띄워주세요<br>
+    원하시는 책을 검색하신 후 Enter를 눌러주세요<br>
+    만약 찾으시는 책이 없다면 검색어를 아래와 같이 바꿔서 시도해보세요<br><br>
+    예시)<br>
+    찾고자하는 책: 라면을 끓이며 - 김훈<br>
+    검색어 = 김 훈(이름 사이에 띄어쓰기 추가)/라면(제목에서 단어만 빼서 검색)
+
+  </p>
+  <div>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRksJcjHBcjquVJos_kIRqZxGlPLFccJfRulbbob5jtf5Ddbbm8zfDqMKb91_AdA7JGkdJsZb9r-BOy/pubhtml?widget=true&amp;headers=false"></iframe>
+  </div>
+  </body>
+  </html>
