--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
     div {
     position: relative;
     padding-top: 56%;
-    width: 80%;
+    width: 95%;
     height: 0;
     }
     div > iframe {
@@ -17,6 +17,9 @@
         width: 100%;
         height: 150%;
     }
+    h3{
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -25,6 +28,9 @@
     <li><a href="list.html">목록보기</a></li>
     <li><a href="search.html">검색하기</a></li>
   </ol>
+  <h3> <자료 구성 예시><br>
+  <img src="0.png" width="600px"> <br><br>
+  </h3>
   <div>
     <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRksJcjHBcjquVJos_kIRqZxGlPLFccJfRulbbob5jtf5Ddbbm8zfDqMKb91_AdA7JGkdJsZb9r-BOy/pubhtml?widget=true&amp;headers=false"></iframe>
   </div>
