--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
     div {
     position: relative;
     padding-top: 56%;
-    width: 95%;
+    width: 630px%;
     height: 0;
     }
     div > iframe {
