--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>index</title>
+  <title>Korean Book Title Translator</title>
   <meta charset="utf-8">
   <style>
     body {
@@ -17,12 +17,23 @@
       border: 3px solid black;
     }
   </style>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ML6LJBHVWT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ML6LJBHVWT');
+  </script>
 </head>
 <body>
   <h1><a href="index.html">토론토 도서관 한글 책 제목 검색</a></h1>
   <ol>
-    <li><a href="list.html">목록보기</a></li>
+    <li><a href="list.html">목록보기(제목 가나다순)</a></li>
+    <li><a href="list2.html">목록보기(저자 가나다순)</a></li>
     <li><a href="search.html">검색하기</a></li>
+    <li><a href="comment.html">방명록 & 문의사항</a></li>
   </ol>
   <h2><br><br> 웹사이트 소개 </h2>
   <p>
