--- a/search.html
+++ b/search.html
@@ -17,7 +17,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
+        width: 90%;
         height: 150%;
     }
   </style>
@@ -25,8 +25,10 @@
   <body>
   <h1><a href="index.html">토론토 도서관 한글 책 제목 검색</a></h1>
   <ol>
-    <li><a href="list.html">목록보기</a></li>
+    <li><a href="list.html">목록보기(제목 가나다순)</a></li>
+    <li><a href="list2.html">목록보기(저자 가나다순)</a></li>
     <li><a href="search.html">검색하기</a></li>
+    <li><a href="comment.html">방명록 & 문의사항</a></li>
   </ol>
   <p>
     <br>사용방법:<br><br>
