--- a/comment.html
+++ b/comment.html
@@ -26,6 +26,10 @@
     <li><a href="search.html">검색하기</a></li>
     <li><a href="comment.html">방명록 & 문의사항</a></li>
   </ol>
+  <p><br><br>
+    아래 댓글 기능을 이용해서 문의 사항을 남길 수 있습니다.<br>
+    페이스북, 트위터, 구글로 로그인한 후 이용해주세요!<br><br>
+  </p>
   <p><div id="disqus_thread"></div>
     <script>
     /**
