--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     찾고자 하는 책을 쉽게 찾을 수가 없습니다.<br><br>
     예를 들어 "0.1 그램 의 희망"이라는 책은<br>
     "0.1 gŭraem ŭi hŭimang"으로 표기되어 있는 식입니다.<br><br>
-    이것은 해외 도서관에서 한글로 도서 정보를 타이핑 할 수 없고<br>
-    한글로 된 도서를 알아볼 수 없기 떄문에<br>
-    정해진 규칙에 따라 한글을 소리나는 대로 옮겨 적었기 때문입니다.<br><br>
+    이것은 해외 도서관에서 한글로 도서 정보를 타이핑 할 수 없기 때문입니다.<br>
+    그래서 도서관 사서가 정해진 규칙에 따라 한글을 소리나는대로 영어로 입력해놓은 것 같습니다.<br><br>
     저는 컴퓨터 프로그래밍을 통해 변환된 제목을<br>
     다시 한국어로 바꾸는 프로그램을 고안했습니다.<br><br>
     아직 부족한 점이 많지만<br>
@@ -65,7 +64,7 @@
   <img src="1.png" width="600px">
   <p><br><br><br>2.제목 복사하기</p>
   <img src="2.png" width="600px">
-  <p><br><br><br>3.토론토 공립 홈페이지에 붙여넣고 검색하기</p>
+  <p><br><br><br>3.토론토 공립 도서관 홈페이지에 붙여넣고 검색하기</p>
   <img src="3.png" width="600px">
   <p><br><br><br>4.검색 결과</p>
   <img src="5.png" width="600px">
